Split library and cli into different modules (#71) (#270)